--- a/branches/DNSSEXY_0_2/doc/README
+++ b/branches/DNSSEXY_0_2/doc/README
@@ -13,9 +13,6 @@ code 0. The zone will then be served. Other exit status codes will discard the
 update and dnssexy will continue to serve the zone before the update.
 
 A verifier is specified with the "verifier:" option in the "zone:" clause.
-Examples for verifiers are: "lds-verify-zone" or "validns -" (don't forget the
-dash (-) to read the zone from stdin), but also verifiers that query the zone
-to be verified may be used.
 
 The zone can be provided to the verifier in two ways. 
 
@@ -27,6 +24,10 @@ The zone can be provided to the verifier in two ways.
 	verifier-enabled zones which can in turn deviate from the general
 	setting with their own option.
 
+	Examples for verifiers that read from the standard input are:
+	"lds-verify-zone -V2" (-V2 to suppress copying of the zone to stdout)
+       	or "validns -" (don't forget the dash (-) to read the zone from stdin).
+
      2. The zone can be served to the verifier.
 
 	This is disabled by default and can be enabled by configuring ip-
@@ -36,8 +37,14 @@ The zone can be provided to the verifier in two ways.
 	specified by the "verify-port" option, which, when not given, will be
 	5347.
 
+	For example to validate the SOA of a zone example.com by querying,
+	with a certain DS record as the trust anchor (in file example.com.ds),
+       	the "verifier:" option could have the following value:
+	"drill -S -k example.com.ds @localhost -p 5347 example.com SOA"
+
+
 A verifier is informed about the domain name of the zone to be verified, and
-the accessablity of the system submitting the zone via environment variables.
+the accessibility of the system submitting the zone via environment variables.
 
 	VERIFY_ZONE 
 		will contain the domain name of the zone to be verified.
@@ -86,17 +93,19 @@ this dnssexy instance is listening on for all its zones in the server section:
 
 	server:
 		ip-address: 10.10.0.1
+		username: dnssexy
 
+The username has to be an existing user identify which dnssexy can run as.
 The zone sections starts with the name.
 
 	zone:
-		name: examples.com
+		name: example.com
 
 In the zone section we allow notifies from the hidden master and indicate that
 we transfer the zone from that master as well.
 
-		allow-notify: 10.0.0.1
-		request-xfr: 10.0.0.1
+		allow-notify: 10.0.0.1 NOKEY
+		request-xfr: 10.0.0.1 NOKEY
 
 Then we configure that we use ldns-verify-zone to validate the zone:
 
@@ -105,6 +114,50 @@ Then we configure that we use ldns-verify-zone to validate the zone:
 And when validated successfully the zone is notified and offered for transfer
 to the public slave:
 
-		notify: 10.20.0.1
-		provide-xfr: 10.20.0.1
+		notify: 10.20.0.1 NOKEY
+		provide-xfr: 10.20.0.1 NOKEY
+
+
+We are ready to startup dnssexy:
+
+		# dnssexyc start
+
+dnssexy will now (after some initial setup) request transfer from the hidden
+master: 10.0.0.1. It will pass the zonefile for assessment to ldns-verify-zone.
+Then, when the zone is valid, it notifies the public slave on 10.20.0.1 and
+offers the newly loaded and validated zone for transfer.
+
+The syslog now contain messages reflecting this sequence of affairs:
+
+	dnssexy[<m1pid>]: new database created (/var/db/dnssexy/dnssexy.db)
+	dnssexy[<m1pid>]: dnssexy started (dnssexy 0.2.10), pid <m1pid>
+	dnssexy[<c1pid>]: adding 1 udp handlers to netio.
+	dnssexy[<c1pid>]: udp socket 10.10.0.1:domain added to netio
+	dnssexy[<c1pid>]: adding 1 tcp handlers to netio.
+	dnssexy[<c1pid>]: tcp socket 10.10.0.1:domain added to netio
+	dnssexy[<m1pid>]: signal received, reloading...
+	dnssexy[<m2pid>]: memory recyclebin holds 1208 bytes
+	dnssexy[<m2pid>]: Zone example.com has changed.
+	dnssexy[<m2pid>]: Zone is verified and complete
+	dnssexy[<m2pid>]: Zone example.com verified successfully.
+	dnssexy[<m2pid>]: Zone verifying done... Good: 1, Bad: 0.
+	dnssexy[<c2pid>]: adding 1 udp handlers to netio.
+	dnssexy[<c2pid>]: udp socket 10.10.0.1:domain added to netio
+	dnssexy[<c2pid>]: adding 1 tcp handlers to netio.
+	dnssexy[<c2pid>]: tcp socket 10.10.0.1:domain added to netio
+	dnssexy[<xfrdpid>]: Zone example.com serial 0 is updated to <serial>.
+
+
+Dnssexy is not NSD
+==================
+WARNING!  Because dnssexy is implemented as a fork of NSD3, it currently
+functions as a complete authoritative DNS namserver and will actually answer
+queries for zones that were deemed correct by a verifier.  However, this
+functionality is not necessary for dnssexy type operation and should disappear
+in future releases. It is recommended not to rely on dnssexy's ability to
+answer queries to the public. In future releases dnssexy might well be
+answering queries to verifiers only. Dnssexy has a different orientation as
+NSD and might develop into an entirely different direction.
+
+Dnssexy will not install the zonec utility.
 
